tags/2013-08-29_cppreference/Archive/35a13ee95563c8050ce4244bd3b90776-ce759ceac3a1c87b565ff35b2f7d6b5c/output
+ g++ -std=c++11 -Wall -Wextra -pedantic main.cpp
main.cpp: In function ‘int main()’:
main.cpp:11:14: error: cannot convert ‘Foo’ to ‘int’ in initialization
     Foo f2{f1};
              ^
main.cpp:11:9: warning: unused variable ‘f2’ [-Wunused-variable]
     Foo f2{f1};
         ^
